# payspyre-backend

./: .dockerignore  .env.example  .env.local.example  .env.production.example  .gitattributes  .gitignore  .gitleaksignore  BRANCH_PROTECTION.md  BRANCH_PROTECTION_SETUP_SUMMARY.md  CONTRIBUTING.md  DATABASE_HYGIENE_REPORT.md  DEPLOYMENT.md  Dockerfile  Dockerfile.production  NOTES.md  OBSERVABILITY_VERIFICATION.md  README.md  README_AUTH.md  REPO_ADMIN_QUICKSTART.md  SECURITY.md  SUPABASE_SETUP.md  TASK_SUMMARY.md  docker-compose.production.yml  docker-compose.yml  error_inventory.md  fixture_dependency_order.md  payspyre_backlog.md  pyproject.toml  setup.cfg  test_data.py  test_health_endpoint.py  test_loan_mutation.py
.do/: DEPLOYMENT.md  STAGING_DEPLOY_RUNBOOK.md  app-staging.yaml  app.yaml
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ai-review.yml  auto-collection-cron.yml  bucket-snapshot-cron.yml  compliance-controls.yml  continuous-smoke.yml  delinquency-cron.yml  deploy.yml  dunning-cron.yml  fuzz-nightly.yml  hardship-cron.yml  load-test.yml  migrations.yml  notifications-cron.yml  report-schedules-cron.yml  scheduled-audit.yml  security-sast.yml  security-scan.yml  security-supplychain.yml  test-p2-patient-profile.yml  tests.yml
.semgrep/: payspyre.yml
alembic/: env.production.py  env.py
alembic/versions/: 001_initial_kyc_schema.py  002_add_auth_schema.py  003_add_credit_bureau_schema.py  004_add_notification_tables.py  (+82 more)
app/: main.py
app/db/: rls.py  (+2 more)
docs/: AWS_S3_SETUP.md  BETA_TESTING.md  CLAUDE_HANDOFF.md  DOCUMENT_STORAGE_API.md  TEST_SYSTEM.md  analytics-api.md  audit_2026-06-19.md  borrower_portal_spec.md  compliance_controls.md  compliance_reference.md  dunning_policy_questions.md  kyc_orchestration_architecture.md  lender_admin_portal_spec.md  ml_data_foundation.md  notification_deployment.md  notification_system.md  payspyre_v2_mvp_kickoff.md  payspyre_v2_spec.md  roadmap_to_launch.md  stripe_integration.md  vendor_dashboard_spec.md
nginx/: nginx.conf
scripts/: _ai_review_smoke.py  ai_review.py  check_migration_drift.py  check_no_stub_migrations.py  concurrency_smoke.py  e2e_smoke.py  init-db.sql  init_notification_templates.py  process_notification_outbox.py  reconcile_disbursements.py  seed_admin.py  seed_past_due.py  setup-supabase-env.ps1  setup-supabase-env.sh  setup.py
sql/: 00_RUN_IN_SUPABASE_DASHBOARD.md  015_create_platform_patients.sql  016_create_platform_patient_fields.sql  017_create_platform_credit_products.sql  018_create_platform_credit_applications.sql  019_create_platform_verifications.sql  020_create_platform_consents.sql  021_create_platform_events.sql  ALL_MIGRATIONS.sql  P2_MIGRATIONS.sql
tests/: conftest.py  test_account_profile.py  test_activation_rework.py  test_activation_rework_wave4.py  test_actual_360_amortization.py  test_admin_actions.py  test_admin_analytics.py  test_admin_archive_queue.py  test_admin_cockpit.py  test_admin_config.py  test_admin_crm_vendor_list.py  test_admin_decision_schema.py  test_admin_dev_tools.py  test_admin_origination_gaps.py  test_admin_vendor_changes.py  test_adverse_action.py  test_alvero_handoff.py  test_analytics.py  test_analytics_reports.py  test_api_fuzz_schemathesis.py  test_api_robustness_regressions.py  test_app_detail_finalize.py  test_applicant_api.py  test_applicant_auth.py  test_applicant_callback_deprecation.py  test_applicant_dev_tools.py  test_applicant_journey.py  test_application_agreement.py  test_application_messaging.py  test_application_process_config.py  test_application_status_writes.py  test_audit_lms_fixes.py  test_audit_marketplace_fixes.py  test_auth.py  test_auto_collection.py  test_backdate_permission.py  test_booking_criminal_rate.py  test_borrower_auth.py  test_borrower_depth.py  test_borrower_loans.py  (+166 more)
(+477 files in other folders)
