[project]
name = "payspyre-backend"
version = "0.1.0"
description = "PaySpyre Financial Backend API"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.25",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.5.3",
    "pydantic-settings>=2.14.2",  # security floor (GHSA-4xgf-cpjx-pc3j)
    "python-jose[cryptography]>=3.3.0",
    "cryptography>=48.0.1",  # security floor (GHSA-537c-gmf6-5ccf)
    "starlette>=1.3.1",  # security floor (CVE-2026-54282/54283); compatible with fastapi>=0.136
    "aiohttp>=3.14.1",  # security floor (multiple 2026 CVEs)
    "passlib[bcrypt]>=1.7.4",
    "bcrypt<5.0.0",
    "python-multipart>=0.0.31",  # security floor (CVE-2026-53538/53539/53540)
    "httpx>=0.26.0",
    "resend>=0.8.0",
    "sendgrid>=6.11.0",
    "twilio>=8.11.0",
    "jinja2>=3.1.2",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.4",
    "pytest-cov>=4.1.0",
    "hypothesis>=6.0.0",
    "schemathesis>=4.0.0",
    "slowapi>=0.1.9",
    "boto3>=1.34.0",
    "email-validator>=2.1.0",
    "stripe>=9.0.0",
    "structlog>=24.1.0",
    "python-json-logger>=2.0.7",
    "sentry-sdk[fastapi]>=1.44.0",
    "jsonschema>=4.20.0",
    "respx>=0.20.0",
    "posthog>=3.0.0",
    "prometheus-client>=0.20.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
asyncio_mode = "auto"
# The Schemathesis no-5xx fuzz is a NON-BLOCKING explorer: the same seed maps to
# different inputs across Python/Hypothesis versions, so it can't be a deterministic
# per-push gate. Excluded by default; the nightly fuzz-explorer opts back in with
# `-m fuzz`. Concrete bugs it found are pinned deterministically by the regression
# tests, which DO run per-push.
addopts = "-m 'not fuzz'"
markers = [
    "fuzz: property/contract fuzzing — non-deterministic across envs; nightly-only",
]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 100

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"